# write-html

./: .gitignore  Cargo.toml  README.md
write-html/: Cargo.toml
write-html-macro/: Cargo.toml
write-html-macro/src/: lib.rs
write-html/benches/: html_builder.rs  write_html.rs  write_html2.rs
write-html/examples/: a.rs  b.rs
write-html/src/: attributes.rs  escapes.rs  html_trait.rs  lib.rs  tag.rs  tags.rs
