[package]
name = "write-html-macro"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A macro for writing HTML in Rust" # TODO update this
homepage = "https://github.com/OpenPhysicsNotes/write-html"
documentation = "https://docs.rs/write-html-macro"
repository = "https://github.com/OpenPhysicsNotes/write-html"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"

[dev-dependencies]
write-html = { path = "../write-html" }
