[package]
name = "write-html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
write-html-macro = { version="0.1.0", path = "../write-html-macro" }

[dev-dependencies]
criterion = "0.4.0"
html-builder = "0.5.1"

#[features]
#default = ["macro"]
#macro = ["write-html-macro"]

[[bench]]
name = 'html_builder'
harness = false

[[bench]]
name = 'write_html'
harness = false

#[[bench]]
#name = 'write_html2'
#harness = false