[package]
name = "write-html"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A crate for writing HTML in Rust" # TODO update this
homepage = "https://github.com/OpenPhysicsNotes/write-html"
documentation = "https://docs.rs/write-html"
repository = "https://github.com/OpenPhysicsNotes/write-html"
readme = "../README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
write-html-macro = { version="0.1.2", path = "../write-html-macro" }

[dev-dependencies]
criterion = "0.4.0"
html-builder = "0.5.1"

#[features]
#default = ["macro"]
#macro = ["write-html-macro"]

[[bench]]
name = 'html_builder'
harness = false

[[bench]]
name = 'write_html'
harness = false

#[[bench]]
#name = 'write_html2'
#harness = false